k8s/app/devops-app/frontend/middleware-add-trailing-slash.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-trailing-slash
  namespace: development
spec:
  redirectRegex:
    regex: "frontend$"
    replacement: "frontend/"
    permanent: true
