k8s/app/devops-app/frontend/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-frontend
  namespace: development
spec:
  stripPrefix:
    prefixes:
      - "/frontend"
