k8s/app/devops-app/frontend/devops-app-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-frontend
  namespace: development
  labels:
    app.kubernetes.io/name: devops-app-frontend
    app.kubernetes.io/version: "1.0.0"
spec:
  selector:
    app: devops-app-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 80
