k8s/app/devops-app/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: devops-app-frontend
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cluster.dev.local`) && PathPrefix(`/frontend`)
      kind: Rule
      services:
        - name: devops-app-frontend
          port: 8080
      middlewares:
        - name: add-trailing-slash
        - name: strip-prefix-frontend
